deploy/kubernetes/overlays/dev/service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: promptledger-api
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30765
      protocol: TCP
